--- a/.github/workflows/release-binaries.yml
+++ b/.github/workflows/release-binaries.yml
@@ -104,6 +104,15 @@ jobs:
           tar cvfz c2pa-node_${{matrix.target}}-${{ github.event.release.tag_name }}.tar.gz c2pa.node
           echo "archive=c2pa-node_${{matrix.target}}-${{ github.event.release.tag_name }}.tar.gz" >> "$GITHUB_OUTPUT"
 
+      - name: Upload artifact
+        id: upload-artifact
+        uses: actions/upload-artifact@v4
+        if: ${{ github.event.release.upload_url == '' }}
+        with:
+          name: ${{ steps.build-library.outputs.archive }}
+          path: generated/${{ steps.build-library.outputs.archive }}
+          retention-days: 3
+
       - name: Upload release asset
         id: upload-release-asset 
         uses: actions/upload-release-asset@v1
