--- a/.github/workflows/release-binaries.yml
+++ b/.github/workflows/release-binaries.yml
@@ -17,12 +17,12 @@ jobs:
         include:
           - target: aarch64-unknown-linux-gnu
             runner: ubuntu-latest
-          - target: x86_64-unknown-linux-gnu
-            runner: ubuntu-latest
-          - target: aarch64-apple-darwin
-            runner: macos-14
-          - target: x86_64-apple-darwin
-            runner: macos-13
+          # - target: x86_64-unknown-linux-gnu
+          #   runner: ubuntu-latest
+          # - target: aarch64-apple-darwin
+          #   runner: macos-14
+          # - target: x86_64-apple-darwin
+          #   runner: macos-13
           # - runner: ubuntu-latest
           #   target: x86_64-pc-windows-gnu
     steps:
@@ -103,7 +103,7 @@ jobs:
         id: get-short-sha
         if: ${{ github.event.release.upload_url == '' }}
         run: |
-          echo 'short_sha=$(git rev-parse --short "$GITHUB_SHA")' >> "$GITHUB_OUTPUT"
+          echo "short_sha=$(git rev-parse --short $GITHUB_SHA)" >> "$GITHUB_OUTPUT"
 
       - name: Package artifact
         id: package-artifact
@@ -111,7 +111,7 @@ jobs:
           ARCHIVE_FILENAME: c2pa-node_${{matrix.target}}-${{ github.event.release.tag_name || steps.get-short-sha.outputs.short_sha }}.tar.gz
         run: |
           cd generated
-          tar cvfz $ARCHIVE_FILENAME c2pa.node
+          tar cvfz "$ARCHIVE_FILENAME" c2pa.node
           echo "archive=$ARCHIVE_FILENAME" >> "$GITHUB_OUTPUT"
 
       - name: Upload artifact
