--- a/.github/workflows/release-binaries.yml
+++ b/.github/workflows/release-binaries.yml
@@ -17,12 +17,12 @@ jobs:
         include:
           - target: aarch64-unknown-linux-gnu
             runner: ubuntu-latest
-          # - target: x86_64-unknown-linux-gnu
-          #   runner: ubuntu-latest
-          # - target: aarch64-apple-darwin
-          #   runner: macos-14
-          # - target: x86_64-apple-darwin
-          #   runner: macos-13
+          - target: x86_64-unknown-linux-gnu
+            runner: ubuntu-latest
+          - target: aarch64-apple-darwin
+            runner: macos-14
+          - target: x86_64-apple-darwin
+            runner: macos-13
           # - runner: ubuntu-latest
           #   target: x86_64-pc-windows-gnu
     steps:
