--- a/.github/workflows/release-binaries.yml
+++ b/.github/workflows/release-binaries.yml
@@ -66,12 +66,6 @@ jobs:
         with:
           shared-key: ${{matrix.target}}
 
-      - name: Check object
-        run: |
-          cat << OBJECT
-          ${{ toJson(github) }}
-          OBJECT
-
       - name: Build library for aarch64-unknown-linux-gnu
         if: ${{matrix.target == 'aarch64-unknown-linux-gnu'}}
         env:
@@ -114,7 +108,7 @@ jobs:
           tar cvfz "$ARCHIVE_FILENAME" c2pa.node
           echo "archive=$ARCHIVE_FILENAME" >> "$GITHUB_OUTPUT"
 
-      - name: Upload artifact
+      - name: Upload artifact (development only)
         id: upload-artifact
         uses: actions/upload-artifact@v4
         if: ${{ github.event.release.upload_url == '' }}
