--- a/.github/workflows/release-binaries.yml
+++ b/.github/workflows/release-binaries.yml
@@ -15,16 +15,16 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - target: aarch64-unknown-linux-gnu
-            runner: ubuntu-latest
-          - target: x86_64-unknown-linux-gnu
-            runner: ubuntu-latest
-          - target: aarch64-apple-darwin
-            runner: macos-14
-          - target: x86_64-apple-darwin
-            runner: macos-13
-          # - runner: ubuntu-latest
-          #   target: x86_64-pc-windows-gnu
+          # - target: aarch64-unknown-linux-gnu
+          #   runner: ubuntu-latest
+          # - target: x86_64-unknown-linux-gnu
+          #   runner: ubuntu-latest
+          # - target: aarch64-apple-darwin
+          #   runner: macos-14
+          # - target: x86_64-apple-darwin
+          #   runner: macos-13
+          - runner: ubuntu-latest
+            target: x86_64-pc-windows-gnu
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -76,15 +76,15 @@ jobs:
           mkdir -p generated/${{matrix.target}}
           pnpm run build:rust --target=${{matrix.target}}
 
-      # - name: Build library for x86_64-pc-windows-gnu
-      #   if: ${{matrix.target == 'x86_64-pc-windows-gnu'}}
-      #   env:
-      #     CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER: x86_64-w64-mingw32-gcc
-      #     CC_aarch64_unknown_linux_gnu: x86_64-w64-mingw32-gcc
-      #     CXX_aarch64_unknown_linux_gnu: x86_64-w64-mingw32-g++
-      #   run: |
-      #     mkdir -p generated/${{matrix.target}}
-      #     pnpm run build:rust --target=${{matrix.target}}
+      - name: Build library for x86_64-pc-windows-gnu
+        if: ${{matrix.target == 'x86_64-pc-windows-gnu'}}
+        env:
+          CARGO_TARGET_X86_64_UNKNOWN_LINUX_GNU_LINKER: x86_64-w64-mingw32-gcc
+          CC_x86_64_unknown_linux_gnu: x86_64-w64-mingw32-gcc
+          CXX_x86_64_unknown_linux_gnu: x86_64-w64-mingw32-g++
+        run: |
+          mkdir -p generated/${{matrix.target}}
+          pnpm run build:rust --target=${{matrix.target}}
 
       - name: Build library
         id: build-library
@@ -118,7 +118,7 @@ jobs:
           retention-days: 3
 
       - name: Upload release asset
-        id: upload-release-asset 
+        id: upload-release-asset
         uses: actions/upload-release-asset@v1
         if: ${{ github.event.release.upload_url != '' }}
         env:
