--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,12 +13,12 @@ crate-type = ["cdylib"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-async-trait = "0.1.77"
-c2pa = { version = "0.28.5", features = [
+c2pa = { git = "https://github.com/contentauth/c2pa-rs", rev = "7bbf729", features = [
 	"fetch_remote_manifests",
 	"file_io",
 	"xmp_write",
 ] }
+async-trait = "0.1.77"
 futures = "0.3"
 once_cell = "1.19.0"
 reqwest = { version = "0.11.18", features = [
@@ -34,6 +34,6 @@ tokio = { version = "1.36.0", features = ["rt-multi-thread", "sync"] }
 
 [dependencies.neon]
 git = "https://github.com/neon-bindings/neon"
-ref = "50c74c0"
+rev = "50c74c0"
 default-features = false
 features = ["futures", "napi-6"]
