--- a/.github/workflows/release-binaries.yml
+++ b/.github/workflows/release-binaries.yml
@@ -24,7 +24,7 @@ jobs:
           # - target: x86_64-apple-darwin
           #   runner: macos-13
           - target: x86_64-pc-windows-gnu
-            runner: ubuntu-latest
+            runner: windows-latest
 
     steps:
       - name: Checkout
@@ -36,11 +36,11 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu libc6-dev-arm64-cross
 
-      - name: Install system deps (x86_64-pc-windows-gnu)
-        if: ${{matrix.target == 'x86_64-pc-windows-gnu'}}
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y gcc-mingw-w64-x86-64 g++-mingw-w64-x86-64
+      # - name: Install system deps (x86_64-pc-windows-gnu)
+      #   if: ${{matrix.target == 'x86_64-pc-windows-gnu'}}
+      #   run: |
+      #     sudo apt-get update
+      #     sudo apt-get install -y gcc-mingw-w64-x86-64 g++-mingw-w64-x86-64
 
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
@@ -77,20 +77,20 @@ jobs:
           mkdir -p generated/${{matrix.target}}
           pnpm run build:rust --target=${{matrix.target}}
 
-      - name: Build library for x86_64-pc-windows-gnu
-        if: ${{matrix.target == 'x86_64-pc-windows-gnu'}}
-        env:
-          CARGO_TARGET_X86_64_PC_WINDOWS_GNU_LINKER: x86_64-w64-mingw32-gcc
-          AR_x86_64_pc_windows_gnu: x86_64-w64-mingw32-gcc-ar
-          CC_x86_64_pc_windows_gnu: x86_64-w64-mingw32-gcc
-          CXX_x86_64_pc_windows_gnu: x86_64-w64-mingw32-g++
-        run: |
-          mkdir -p generated/${{matrix.target}}
-          pnpm run build:rust --target=${{matrix.target}}
+      # - name: Build library for x86_64-pc-windows-gnu
+      #   if: ${{matrix.target == 'x86_64-pc-windows-gnu'}}
+      #   env:
+      #     CARGO_TARGET_X86_64_PC_WINDOWS_GNU_LINKER: x86_64-w64-mingw32-gcc
+      #     AR_x86_64_pc_windows_gnu: x86_64-w64-mingw32-gcc-ar
+      #     CC_x86_64_pc_windows_gnu: x86_64-w64-mingw32-gcc
+      #     CXX_x86_64_pc_windows_gnu: x86_64-w64-mingw32-g++
+      #   run: |
+      #     mkdir -p generated/${{matrix.target}}
+      #     pnpm run build:rust --target=${{matrix.target}}
 
       - name: Build library
         id: build-library
-        if: ${{!contains(fromJSON('["aarch64-unknown-linux-gnu", "x86_64-pc-windows-gnu"]'), matrix.target)}}
+        if: ${{!contains(fromJSON('["aarch64-unknown-linux-gnu"]'), matrix.target)}}
         run: |
           mkdir -p generated/${{matrix.target}}
           pnpm run build:rust --target=${{matrix.target}}
