--- a/.github/workflows/release-binaries.yml
+++ b/.github/workflows/release-binaries.yml
@@ -48,6 +48,11 @@ jobs:
           components: llvm-tools-preview
           target: ${{matrix.target}}
 
+      - name: Cache Rust dependencies
+        uses: Swatinem/rust-cache@v2
+        with:
+          shared-key: ${{matrix.target}}
+
       - name: Install pnpm
         run: |
           corepack enable
@@ -62,11 +67,6 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
-      - name: Cache Rust dependencies
-        uses: Swatinem/rust-cache@v2
-        with:
-          shared-key: ${{matrix.target}}
-
       - name: Build library for aarch64-unknown-linux-gnu
         if: ${{matrix.target == 'aarch64-unknown-linux-gnu'}}
         env:
@@ -77,7 +77,7 @@ jobs:
           mkdir -p generated/${{matrix.target}}
           pnpm run build:rust --target=${{matrix.target}}
 
-      - name: Build library for x86_64-pc-windows-gnu
+      - name: Update OpenSSL for x86_64-pc-windows-gnu
         if: ${{matrix.target == 'x86_64-pc-windows-gnu'}}
         run: |
           vcpkg install openssl:x64-windows
