--- a/.github/workflows/release-binaries.yml
+++ b/.github/workflows/release-binaries.yml
@@ -48,11 +48,6 @@ jobs:
           components: llvm-tools-preview
           target: ${{matrix.target}}
 
-      - name: Cache Rust dependencies
-        uses: Swatinem/rust-cache@v2
-        with:
-          shared-key: ${{matrix.target}}
-
       - name: Install pnpm
         run: |
           corepack enable
@@ -63,6 +58,11 @@ jobs:
         with:
           node-version: 18
           cache: pnpm
+
+      - name: Cache Rust dependencies
+        uses: Swatinem/rust-cache@v2
+        with:
+          shared-key: ${{matrix.target}}
 
       - name: Build library for aarch64-unknown-linux-gnu
         if: ${{matrix.target == 'aarch64-unknown-linux-gnu'}}
@@ -75,17 +75,13 @@ jobs:
           mkdir -p generated/${{matrix.target}}
           pnpm run build:rust --target=${{matrix.target}}
 
-      # - name: Update OpenSSL for x86_64-pc-windows-gnu
-      #   if: ${{matrix.target == 'x86_64-pc-windows-gnu'}}
-      #   run: pacman -S --noconfirm openssl-devel
-
-      - name: Setup tmate session
-        uses: mxschmitt/action-tmate@v3
-        with:
-          limit-access-to-actor: true
-
       - name: Build library for x86_64-pc-windows-gnu
         if: ${{matrix.target == 'x86_64-pc-windows-gnu'}}
+        env:
+          CARGO_TARGET_X86_64_PC_WINDOWS_GNU_LINKER: x86_64-w64-mingw32-gcc
+          AR_x86_64_pc_windows_gnu: x86_64-w64-mingw32-gcc-ar
+          CC_x86_64_pc_windows_gnu: x86_64-w64-mingw32-gcc
+          CXX_x86_64_pc_windows_gnu: x86_64-w64-mingw32-g++
         run: |
           pnpm install
           mkdir -p generated/${{matrix.target}}
@@ -93,7 +89,7 @@ jobs:
 
       - name: Build library
         id: build-library
-        if: ${{!contains(fromJSON('["aarch64-unknown-linux-gnu", "x86_64-pc-windows-gnu"]'), matrix.target)}}
+        if: ${{!contains(fromJSON('["aarch64-unknown-linux-gnu"]'), matrix.target)}}
         run: |
           pnpm install
           mkdir -p generated/${{matrix.target}}
