--- a/.github/workflows/release-binaries.yml
+++ b/.github/workflows/release-binaries.yml
@@ -36,11 +36,11 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu libc6-dev-arm64-cross
 
-      # - name: Install system deps (x86_64-pc-windows-gnu)
-      #   if: ${{matrix.target == 'x86_64-pc-windows-gnu'}}
-      #   run: |
-      #     sudo apt-get update
-      #     sudo apt-get install -y gcc-mingw-w64-x86-64 g++-mingw-w64-x86-64
+      - name: Install system deps (x86_64-pc-windows-gnu)
+        if: ${{matrix.target == 'x86_64-pc-windows-gnu'}}
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y gcc-mingw-w64-x86-64 g++-mingw-w64-x86-64
 
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
@@ -78,6 +78,7 @@ jobs:
       - name: Build library for x86_64-pc-windows-gnu
         if: ${{matrix.target == 'x86_64-pc-windows-gnu'}}
         env:
+          OPENSSL_NO_VENDOR: 1
           CARGO_TARGET_X86_64_PC_WINDOWS_GNU_LINKER: x86_64-w64-mingw32-gcc
           AR_x86_64_pc_windows_gnu: x86_64-w64-mingw32-gcc-ar
           CC_x86_64_pc_windows_gnu: x86_64-w64-mingw32-gcc
