Add build rust-cross

--- a/.github/workflows/release-binaries.yml
+++ b/.github/workflows/release-binaries.yml
@@ -86,11 +86,11 @@ jobs:
         if: ${{matrix.target == 'x86_64-pc-windows-gnu'}}
         run: |
           mkdir -p generated/${{matrix.target}}
-          pnpm cargo-cp-artifact -nc generated/c2pa.node -- cross build --message-format=json-render-diagnostics --release --target=${{matrix.target}}
+          pnpm run build:rust-cross --target=${{matrix.target}}
 
       - name: Build library
         id: build-library
-        if: ${{!contains(fromJSON('["aarch64-unknown-linux-gnu"]'), matrix.target)}}
+        if: ${{!contains(fromJSON('["aarch64-unknown-linux-gnu", "x86_64-pc-windows-gnu"]'), matrix.target)}}
         run: |
           mkdir -p generated/${{matrix.target}}
           pnpm run build:rust --target=${{matrix.target}}
