--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "scripts": {
     "dev": "node ./scripts/dev-reload.js",
     "build:rust": "cargo-cp-artifact -nc generated/c2pa.node -- cargo build --message-format=json-render-diagnostics --release",
+    "build:rust-cross": "cargo-cp-artifact -nc generated/c2pa.node -- cross build --message-format=json-render-diagnostics --release",
     "build:ts": "tsc -b && cpy js-src/types.d.ts dist",
     "build:assets": "cpy src Cargo.* generated dist",
     "build:docs": "typedoc --plugin typedoc-plugin-markdown --readme none --out docs js-src/index.ts",
