--- a/.github/workflows/release-binaries.yml
+++ b/.github/workflows/release-binaries.yml
@@ -88,7 +88,7 @@ jobs:
           mkdir -p generated/${{matrix.target}}
           pnpm run build:rust-cross --target=${{matrix.target}}
 
-      - name: Build library
+      - name: Build library for other targets
         id: build-library
         if: ${{!contains(fromJSON('["aarch64-unknown-linux-gnu", "x86_64-pc-windows-gnu"]'), matrix.target)}}
         run: |
