--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 async-trait = "0.1.77"
-c2pa = { version = "0.28.5", features = [
+c2pa = { git = "https://github.com/contentauth/c2pa-rs", rev = "dfa0de4", features = [
 	"fetch_remote_manifests",
 	"file_io",
 	"xmp_write",
