--- a/.github/workflows/release-binaries.yml
+++ b/.github/workflows/release-binaries.yml
@@ -23,7 +23,7 @@ jobs:
           #   runner: macos-14
           # - target: x86_64-apple-darwin
           #   runner: macos-13
-          - target: x86_64-pc-windows-gnu
+          - target: x86_64-pc-windows-msvc
             runner: ubuntu-latest
 
     steps:
@@ -35,12 +35,6 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu libc6-dev-arm64-cross
-
-      - name: Install system deps (x86_64-pc-windows-gnu)
-        if: ${{matrix.target == 'x86_64-pc-windows-gnu'}}
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y gcc-mingw-w64-x86-64 g++-mingw-w64-x86-64
 
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
@@ -82,17 +76,15 @@ jobs:
           mkdir -p generated/${{matrix.target}}
           pnpm run build:rust --target=${{matrix.target}}
 
-      - name: Build library for x86_64-pc-windows-gnu
-        if: ${{matrix.target == 'x86_64-pc-windows-gnu'}}
-        env:
-          GIT_DISCOVERY_ACROSS_FILESYSTEM: 1
+      - name: Build library for x86_64-pc-windows-msvc
+        if: ${{matrix.target == 'x86_64-pc-windows-msvc'}}
         run: |
           mkdir -p generated/${{matrix.target}}
           pnpm run build:rust-cross --target=${{matrix.target}}
 
       - name: Build library for other targets
         id: build-library
-        if: ${{!contains(fromJSON('["aarch64-unknown-linux-gnu", "x86_64-pc-windows-gnu"]'), matrix.target)}}
+        if: ${{!contains(fromJSON('["aarch64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]'), matrix.target)}}
         run: |
           mkdir -p generated/${{matrix.target}}
           pnpm run build:rust --target=${{matrix.target}}
