--- a/.github/workflows/release-binaries.yml
+++ b/.github/workflows/release-binaries.yml
@@ -24,7 +24,7 @@ jobs:
           # - target: x86_64-apple-darwin
           #   runner: macos-13
           - target: x86_64-pc-windows-msvc
-            runner: ubuntu-latest
+            runner: windows-latest
 
     steps:
       - name: Checkout
@@ -47,13 +47,10 @@ jobs:
           corepack enable
           corepack prepare pnpm@latest --activate
 
-      - name: Install cross-compilation toolset
-        run: cargo install cross
-
       - name: Install Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 18
           cache: pnpm
 
       - name: Cache Rust dependencies
@@ -76,15 +73,9 @@ jobs:
           mkdir -p generated/${{matrix.target}}
           pnpm run build:rust --target=${{matrix.target}}
 
-      - name: Build library for x86_64-pc-windows-msvc
-        if: ${{matrix.target == 'x86_64-pc-windows-msvc'}}
-        run: |
-          mkdir -p generated/${{matrix.target}}
-          pnpm run build:rust-cross --target=${{matrix.target}}
-
-      - name: Build library for other targets
+      - name: Build library
         id: build-library
-        if: ${{!contains(fromJSON('["aarch64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]'), matrix.target)}}
+        if: ${{!contains(fromJSON('["aarch64-unknown-linux-gnu"]'), matrix.target)}}
         run: |
           mkdir -p generated/${{matrix.target}}
           pnpm run build:rust --target=${{matrix.target}}
