--- a/.github/workflows/release-binaries.yml
+++ b/.github/workflows/release-binaries.yml
@@ -15,14 +15,14 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          # - target: aarch64-unknown-linux-gnu
-          #   runner: ubuntu-latest
-          # - target: x86_64-unknown-linux-gnu
-          #   runner: ubuntu-latest
-          # - target: aarch64-apple-darwin
-          #   runner: macos-14
-          # - target: x86_64-apple-darwin
-          #   runner: macos-13
+          - target: aarch64-unknown-linux-gnu
+            runner: ubuntu-latest
+          - target: x86_64-unknown-linux-gnu
+            runner: ubuntu-latest
+          - target: aarch64-apple-darwin
+            runner: macos-14
+          - target: x86_64-apple-darwin
+            runner: macos-13
           - target: x86_64-pc-windows-msvc
             runner: windows-latest
 
@@ -80,16 +80,10 @@ jobs:
           mkdir -p generated/${{matrix.target}}
           pnpm run build:rust --target=${{matrix.target}}
 
-      - name: Get short SHA
-        id: get-short-sha
-        if: ${{ github.event.release.upload_url == '' }}
-        run: |
-          echo "short_sha=$(git rev-parse --short $GITHUB_SHA)" >> "$GITHUB_OUTPUT"
-
       - name: Package artifact
         id: package-artifact
         env:
-          ARCHIVE_FILENAME: c2pa-node_${{matrix.target}}-${{ github.event.release.tag_name || steps.get-short-sha.outputs.short_sha }}.tar.gz
+          ARCHIVE_FILENAME: c2pa-node_${{matrix.target}}-${{ github.event.release.tag_name || 'dev' }}.tar.gz
         run: |
           cd generated
           tar cvfz "$ARCHIVE_FILENAME" c2pa.node
