--- a/.github/workflows/release-binaries.yml
+++ b/.github/workflows/release-binaries.yml
@@ -86,7 +86,7 @@ jobs:
           ARCHIVE_FILENAME: c2pa-node_${{matrix.target}}-${{ github.event.release.tag_name || 'dev' }}.zip
         run: |
           cd generated
-          zip "$ARCHIVE_FILENAME" c2pa.node
+          7z a -tzip "$ARCHIVE_FILENAME" c2pa.node
           echo "archive=$ARCHIVE_FILENAME" >> "$GITHUB_OUTPUT"
 
       - name: Upload artifact (development only)
