--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "c2pa-node",
-  "version": "0.5.10",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dkozma/c2pa-node.git"
+  },
+  "version": "0.9.1",
   "description": "Node.js bindings for C2PA",
   "main": "dist/js-src/index.js",
   "types": "dist/js-src/index.d.ts",
@@ -52,10 +56,6 @@
     "typedoc": "^0.24.8",
     "typedoc-plugin-markdown": "^3.15.3",
     "typescript": "^5.0.4"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/contentauth/c2pa-node.git"
   },
   "keywords": [
     "c2pa"
