--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "c2pa-node",
   "repository": {
     "type": "git",
-    "url": "https://github.com/dkozma/c2pa-node.git"
+    "url": "https://github.com/contentauth/c2pa-node.git"
   },
-  "version": "0.9.1",
+  "version": "0.5.12",
   "description": "Node.js bindings for C2PA",
   "main": "dist/js-src/index.js",
   "types": "dist/js-src/index.d.ts",
@@ -44,18 +44,21 @@
     "@types/node-fetch": "^2.6.4",
     "@types/pixelmatch": "^5.2.4",
     "chokidar": "^3.5.3",
+    "cli-progress": "^3.12.0",
     "cpy-cli": "^4.2.0",
     "jest": "^29.5.0",
     "nock": "^13.3.1",
     "node-fetch": "^2.6.11",
     "pixelmatch": "^5.3.0",
     "prettier": "2.8.8",
+    "pretty-bytes": "^5.6.0",
     "rimraf": "^5.0.1",
     "tempy": "^1.0.1",
     "ts-jest": "^29.1.0",
     "typedoc": "^0.24.8",
     "typedoc-plugin-markdown": "^3.15.3",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "unzipper": "^0.10.14"
   },
   "keywords": [
     "c2pa"
