--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,8 +54,8 @@ jobs:
         include:
           - target: aarch64-unknown-linux-gnu
             runner: ubuntu-latest
-          # - target: x86_64-unknown-linux-gnu
-          #   runner: ubuntu-latest
+          - target: x86_64-unknown-linux-gnu
+            runner: ubuntu-latest
           # - target: aarch64-apple-darwin
           #   runner: macos-14
           # - target: x86_64-apple-darwin
