--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -19,6 +19,9 @@ jobs:
           corepack enable
           corepack prepare pnpm@latest --activate
 
+      - name: Cache Rust dependencies
+        uses: Swatinem/rust-cache@v2
+
       - name: Install Node.js
         uses: actions/setup-node@v4
         with:
@@ -28,5 +31,7 @@ jobs:
       - env:
           SKIP_RUST_BUILD: 1
         run: pnpm install
+
       - run: pnpm run build
+
       - run: pnpm run ci
