--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,6 +30,8 @@ jobs:
           cache: pnpm
 
       - name: Install Dependencies
+        env:
+          SKIP_RUST_BUILD: 1
         run: pnpm install
 
       - name: Create Release Pull Request or Publish to npm
