--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "c2pa-node",
-  "version": "0.5.12",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/contentauth/c2pa-node.git"
+  },
+  "version": "0.5.13",
   "description": "Node.js bindings for C2PA",
   "main": "dist/js-src/index.js",
   "types": "dist/js-src/index.d.ts",
@@ -27,7 +31,8 @@
     "download-test-certs": "node ./scripts/download-test-certs.js",
     "ci": "cargo test --release && jest",
     "changeset:publish": "changeset publish",
-    "release": "run-s build changeset:publish",
+    "release-orig": "run-s build changeset:publish",
+    "release": "echo 'running release'",
     "test": "cargo test && jest",
     "test:watch": "cargo test && jest --watch --runInBand --detectOpenHandles --forceExit",
     "clean": "rimraf dist generated target"
@@ -40,22 +45,21 @@
     "@types/node-fetch": "^2.6.4",
     "@types/pixelmatch": "^5.2.4",
     "chokidar": "^3.5.3",
+    "cli-progress": "^3.12.0",
     "cpy-cli": "^4.2.0",
-    "jest": "^29.5.0",
+    "jest": "^29.7.0",
     "nock": "^13.3.1",
     "node-fetch": "^2.6.11",
     "pixelmatch": "^5.3.0",
     "prettier": "2.8.8",
+    "pretty-bytes": "^5.6.0",
     "rimraf": "^5.0.1",
     "tempy": "^1.0.1",
-    "ts-jest": "^29.1.0",
+    "ts-jest": "^29.1.2",
     "typedoc": "^0.24.8",
     "typedoc-plugin-markdown": "^3.15.3",
-    "typescript": "^5.0.4"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/contentauth/c2pa-node.git"
+    "typescript": "^5.0.4",
+    "unzipper": "^0.10.14"
   },
   "keywords": [
     "c2pa"
@@ -71,6 +75,6 @@
     "mkdirp": "^3.0.1",
     "npm-run-all": "^4.1.5",
     "pkg-dir": "5",
-    "sharp": "^0.32.1"
+    "sharp": "^0.33.2"
   }
 }
