--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,7 +45,7 @@ jobs:
 
   release-binaries:
     needs: release
-    if: ${{ needs.release.outputs.published }}
+    if: ${{ needs.release.outputs.published == true }}
     name: Build binaries for ${{matrix.target}}
     runs-on: ${{matrix.runner}}
     env:
@@ -66,6 +66,10 @@ jobs:
           #   runner: windows-latest
 
     steps:
+      - name: Show published packages
+        run: |
+          echo '${{ needs.release.outputs.publishedPackages }}'
+
       - name: Checkout
         uses: actions/checkout@v4
 
@@ -153,5 +157,5 @@ jobs:
             -H "Authorization: Bearer ${{ env.GITHUB_TOKEN }}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             -H "Content-Type: application/zip" \
-            "https://uploads.github.com/repos/${{ env.OWNER }}/${{ env.REPO}}/releases/${{ env.PUBLISHED_VERSION }}/assets?name=${{ steps.package-artifact.outputs.archive }}" \
+            "https://uploads.github.com/repos/${{ env.OWNER }}/${{ env.REPO }}/releases/${{ env.PUBLISHED_VERSION }}/assets?name=${{ steps.package-artifact.outputs.archive }}" \
             --data-binary "@generated/${{ steps.package-artifact.outputs.archive }}"
