--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,6 +43,12 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
+      - name: Check object
+        run: |
+          cat << OBJECT
+          ${{ toJson(steps.changesets.outputs) }}
+          OBJECT
+
   release-binaries:
     needs: release
     if: needs.release.outputs.published == 'true'
